Fixed contact modal and home buttons on mobile view

--- a/src/css/ContactModal.css
+++ b/src/css/ContactModal.css
@@ -68,7 +68,7 @@ body {
   }
   
   form p {
-    font-weight: 500;
+    font-weight: 600;
     color: #fff;
     opacity: 0.7;
     font-size: 1.4rem;
@@ -107,7 +107,7 @@ body {
     box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+    font-weight: 800;
     transition: all 0.2s ease-in-out;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   }
@@ -240,3 +240,67 @@ body {
     outline: none;
   }
   
+  @media (max-width: 768px){
+    form{
+      width: 65vw;
+      height: 65vw;
+    }
+    .close-button{
+      scale: 1.5;
+      margin-left: 15px;
+      margin-top: 10px;
+    }
+
+    form input{
+      margin-bottom: 1em;
+    }
+
+    form p{
+      margin-bottom: 1vw;
+    }
+    form button{
+      width: 60%;
+    }
+
+    textarea{
+      width: 86%;
+      font-size: 0.85rem;
+    }
+    .drop-1 {
+      height: 70px;
+      width: 70px;
+      top: -10px;
+      left: -5px;
+      z-index: -1;
+    }
+    
+    .drop-2 {
+      height: 70px;
+      width: 70px;
+      bottom: -20px;
+      right: -10px;
+    }
+    
+    .drop-3 {
+      height: 80px;
+      width: 80px;
+      bottom: 80px;
+      right: -30px;
+      z-index: -1;
+    }
+    
+    .drop-4 {
+      height: 80px;
+      width: 80px;
+      top: -40px;
+      right: -5px;
+    }
+    
+    .drop-5 {
+      height: 60px;
+      width: 60px;
+      bottom: 170px;
+      left: 90px;
+      z-index: -1;
+    }
+  }
