--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -76,7 +76,7 @@ html, body {
   .navigate-button {
     margin-top: 5%;
     width: 7vw;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     background: rgba(245, 245, 245, 1.0);
     border-radius: 40px;
     height: 40%;
@@ -129,6 +129,11 @@ color: white;
     height: 30px;
   }
 
+  .button-text {
+    font-size: 1.5rem; /* Customize the font size for the button text */
+  }
+  
+
 @keyframes fadeIn {
     from {
       opacity: 0;
@@ -154,8 +159,8 @@ color: white;
         font-size: 4rem;
     }
     .navigate-button{
-        font-size: 1.75rem;
-        width: 60%;
+        width: 100%;
+        white-space: nowrap;
     }
     .bottom-button{
       margin-right: 2rem;
